<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_label">Email</string>
    <string name="login">Login</string>
    <string name="pw_label">Password</string>
    <string name="email_hint">Enter your email</string>
    <string name="pw_hint">Enter your password</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="logo_content_desc">Sole logo</string>
    <string name="shoes_image_content_desc">A big pile of multi-colored shoes</string>
    <string name="welcome_to_soul">Welcome to SOUL!</string>
    <string name="soul_desc">Large or small, necessary or completely frivolous, your shoe stash is an essential part of keeping your wardrobe so fresh and so clean. You need a kick-ass way to keep track of all the shoes in your stash. You need SOUL, a state-of-the-art shoe stash organizational platform that is custom designed to meet all of your shoe tracking needs.\n\n </string>
    <string name="instructions_intro">The 4 Steps of SOUL!!</string>
    <string name="step_one_label">Step 1</string>
    <string name="step_two_label">Step 2</string>
    <string name="step_three_label">Step 3</string>
    <string name="step_four_label">Step 4</string>
    <string name="step_one">Add a shoe to your stash!</string>
    <string name="step_two">Repeat for all the shoes in your wardrobe!</string>
    <string name="step_three">Gaze in awe at all of your shoes!</string>
    <string name="step_four">Wear your shoes and conquer the world in style! </string>
    <string name="next">Next</string>
    <string name="back">NOPE</string>
    <string name="start">YEAH</string>
    <string name="pumped_text">Are you pumped?</string>
    <string name="stash_title">Your Stash</string>
    <string name="shoe_name">Name</string>
    <string name="company_label">Company</string>
    <string name="size_label">Size</string>
    <string name="desc_label">Description</string>
    <string name="description_hint">Tell us more about what makes this pair of shoes so darn special!</string>
    <string name="name_hint">What kind of shoe?</string>
    <string name="company_hint">Who makes \'em?</string>
    <string name="size_hint">Not your IQ</string>
    <string name="stash_upgrade">Ready to upgrade your stash?</string>
    <string name="row_of_shoes">A row of shoes</string>
    <string name="stash_upgraded">Your stash has been upgraded!</string>
    <string name="is_empty">... Is Empty</string>
    <string name="empty_stash_helper">It\'s a little dull around here without any shoes. Try clicking the shoe button below to make the most out of Soul.</string>
</resources>

