<?xml version="1.0" encoding="utf-8"?>

<layout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginInfo"
            type="com.udacity.shoestore.models.LoginInfo" />
    </data>

    <!-- Once again, I chose ConstraintLayout to avoid having nested layouts for the form
         and button rows.-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        tools:context=".LoginFragment">

        <TextView
            android:id="@+id/login_title"
            style="@style/title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basic_margin"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_vertical_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".33" />


        <TextView
            android:id="@+id/email_label_text"
            style="@style/label_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/basic_margin"
            android:layout_marginEnd="@dimen/split_margin"
            android:text="@string/email_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/email_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/left_vertical_guide"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/email_edit_text"
            style="@style/email_input_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/split_margin"
            android:layout_marginTop="@dimen/basic_margin"
            android:layout_marginEnd="@dimen/basic_margin"
            android:autofillHints="emailAddress"
            android:hint="@string/email_hint"
            android:text="@={loginInfo.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/left_vertical_guide"
            app:layout_constraintTop_toBottomOf="@+id/login_title" />

        <TextView
            android:id="@+id/pw_label_text"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/basic_margin"
            android:layout_marginEnd="@dimen/split_margin"
            android:text="@string/pw_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/pw_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/left_vertical_guide"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/pw_edit_text"
            style="@style/input_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/split_margin"
            android:layout_marginTop="@dimen/basic_margin"
            android:layout_marginEnd="@dimen/basic_margin"
            android:hint="@string/pw_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/left_vertical_guide"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
            android:autofillHints="password" />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/basic_margin"
            android:layout_marginEnd="@dimen/split_margin"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/create_account"
            android:textColor="@color/colorAccent"
            app:layout_constraintBaseline_toBaselineOf="@+id/login_button"
            app:layout_constraintEnd_toStartOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/split_margin"
            android:layout_marginEnd="@dimen/basic_margin"
            android:layout_marginBottom="@dimen/basic_margin"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/log_in"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/create_account_button"
            app:layout_constraintTop_toBottomOf="@+id/pw_edit_text"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/shoes_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/basic_margin"
            android:layout_marginBottom="@dimen/basic_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/shoes_image_content_desc"
            android:cropToPadding="false"
            android:scaleType="center"
            android:src="@drawable/shoes_background"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pw_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>