<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InstructionsFragment">

    <!-- ConstraintLayout was the obvious choice for this fragment, as I wanted to stagger the
         instruction rows dynamically and have a tinted text view over an image view. -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/top_image_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/top_image"
            android:contentDescription="@string/row_of_shoes"
            app:layout_constraintBottom_toTopOf="@+id/title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/top_image_1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/top_image_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/top_image"
            android:contentDescription="@string/row_of_shoes"
            app:layout_constraintBottom_toTopOf="@+id/title_text"
            app:layout_constraintEnd_toStartOf="@+id/top_image_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/instructions_intro"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bottom_image_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_image_1" />

        <ImageView
            android:id="@+id/bottom_image_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/bottom_image"
            android:contentDescription="@string/row_of_shoes"
            app:layout_constraintBottom_toTopOf="@id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/bottom_image_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <ImageView
            android:id="@+id/bottom_image_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/bottom_image"
            android:contentDescription="@string/row_of_shoes"
            app:layout_constraintBottom_toTopOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bottom_image_1"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/step_one_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:rotation="-30"
            android:rotationY="11"
            android:text="@string/step_one_label"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:translationX="30dp"
            android:translationY="-20dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <TextView
            android:id="@+id/step_one_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/step_one"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/step_one_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/step_one_label" />

        <TextView
            android:id="@+id/step_two_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:rotation="30"
            android:text="@string/step_two_label"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/step_two_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/step_two_text" />

        <TextView
            android:id="@+id/step_two_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/step_two"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/guildeline_right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_one_text" />

        <TextView
            android:id="@+id/step_three_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:rotation="-30"
            android:text="@string/step_three_label"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:translationX="30dp"
            android:translationY="-20dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_two_text" />

        <TextView
            android:id="@+id/step_three_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/step_three"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/step_three_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_left" />

        <TextView
            android:id="@+id/step_four_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:rotation="30"
            android:text="@string/step_four_label"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/step_four_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guildeline_right" />

        <TextView
            android:id="@+id/step_four_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/step_four"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/guildeline_right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_three_text" />

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/shoes_background"
            android:contentDescription="@string/shoes_image_content_desc"
            app:layout_constraintBottom_toTopOf="@id/nope_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_four_text" />

        <TextView
            android:id="@+id/pumped_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/semi_faded_color_accent"
            android:gravity="center"
            android:lineSpacingExtra="8sp"
            android:text="@string/pumped_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/nope_button"
            app:layout_constraintEnd_toStartOf="@+id/guildeline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/step_four_text" />

        <Button
            android:id="@+id/nope_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:drawableStart="@drawable/shoe_button_back"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/yep_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/yep_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:drawableEnd="@drawable/shoe_button_right"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nope_button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guildeline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>